Follow AC_INIT defines throughout the Windows installer.
Change-Id: I030c64c9f641d5b3c0ecf57dfd1f7c1cd627d65f

--- a/src/win32/Makefile
+++ b/src/win32/Makefile
@@ -92,6 +92,7 @@ Makefile.inc: ../../burp-cross-tools
 	BUILDDIR=`(pwd)`; \
 	MAINDIR=`(cd ../..;pwd)`; \
 	sed \
+		-e "s^@BITS@^$${BITS}^g" \
 		-e "s^@WIN64@^$${WIN64}^g" \
 		-e "s^@DEPKGS@^$${DEPKGSDIR}^g" \
 		-e "s^@BUILDDIR@^$${BUILDDIR}^g" \
@@ -102,6 +103,4 @@ Makefile.inc: ../../burp-cross-tools
 		-e "s^@MINGW_PREFIX@^$${MINGW_PREFIX}^g" \
 		-e "s^@DLLDIR@^$${DLLDIR}^g" < Makefile.inc.in > $@ ; \
 	mkdir -vp installer$${BITS} ; \
-	sed \
-		-e "s^@BITS@^$${BITS}^g" \
-		< Makefile.installer.in > installer$${BITS}/Makefile
+	cp Makefile.installer installer$${BITS}/Makefile
