--- a/src/win32/installer/ConfigPage1.ini
+++ b/src/win32/installer/ConfigPage1.ini
@@ -19,7 +19,7 @@ Bottom=10
 
 [Field 3]
 Type=Label
-Text=Enter the name or address of your Burp server.
+Text=Enter the name or address of your server.
 Left=0
 Right=-1
 Top=15
