--- a/configs/certs/CA/burp_ca.bat.in
+++ b/configs/certs/CA/burp_ca.bat.in
@@ -1,10 +1,10 @@
 echo off
 
-REM This script is based on burp_ca, runs on Windows, and contains only the
+REM This script is based on @name@_ca, runs on Windows, and contains only the
 REM stuff that the client needs to run.
 REM
 REM It is going to be run with arguments that look like the following:
-REM burp_ca.bat --key --keypath "C:/Program Files/Burp/ssl_cert-client.key" --request --requestpath "C:/Program Files/Burp/CA/win2008.csr" --name win2008
+REM @name@_ca.bat --key --keypath "C:/Program Files/@human_name@/ssl_cert-client.key" --request --requestpath "C:/Program Files/@human_name@/CA/win2008.csr" --name win2008
 
 REM The tildas here stop Windows putting quotes around the variable.
 set "keypath=%~3"
@@ -13,17 +13,17 @@ set "name=%~8"
 REM Need to set OPENSSL_CONF otherwise openssl tries to find an conf file from
 REM within my mingw build environment. Set it to an empty file that the
 REM installer will create.
-REM Burp used to always put things in C:\Program Files\Burp\, but as of
-REM 1.3.11, it changed to putting them in %PROGRAMFILES%, but still want to
-REM let the old way work.
-IF EXIST "C:\Program Files\Burp" (
-	set "OPENSSL_CONF=C:\Program Files\Burp\openssl.conf"
-	set "openssl=C:\Program Files\Burp\bin\openssl.exe"
-	set "tmpconf=C:\Program Files\Burp\CA\tmp.conf"
+REM @human_name@ used to always put things in C:\Program Files\@human_name@\,
+REM but as of 1.3.11, it changed to putting them in %PROGRAMFILES%, but still
+REM want to let the old way work.
+IF EXIST "C:\Program Files\@human_name@" (
+	set "OPENSSL_CONF=C:\Program Files\@human_name@\openssl.conf"
+	set "openssl=C:\Program Files\@human_name@\bin\openssl.exe"
+	set "tmpconf=C:\Program Files\@human_name@\CA\tmp.conf"
 ) ELSE (
-	set "OPENSSL_CONF=%PROGRAMFILES%\Burp\openssl.conf"
-	set "openssl=%PROGRAMFILES%\Burp\bin\openssl.exe"
-	set "tmpconf=%PROGRAMFILES%\Burp\CA\tmp.conf"
+	set "OPENSSL_CONF=%PROGRAMFILES%\@human_name@\openssl.conf"
+	set "openssl=%PROGRAMFILES%\@human_name@\bin\openssl.exe"
+	set "tmpconf=%PROGRAMFILES%\@human_name@\CA\tmp.conf"
 )
 
 if %3.==. goto notenoughparams
@@ -55,6 +55,6 @@ del "%tmpconf%"
 exit 0
 
 :notenoughparams
-echo "burp_ca.bat not given enough parameters"
+echo "%0 not given enough parameters"
 exit 1
 
