--- a/configs/server/burp.conf.in
+++ b/configs/server/burp.conf.in
@@ -137,6 +137,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_success_arg = To: youremail@example.com
 #notify_success_arg = From: @name@
 #notify_success_arg = Subject: %b succeeded: %c %w
+#notify_success_arg = Content-Type: text/plain; charset=utf-8
 # Uncomment the following to have success notifications only if there were
 # warnings.
 #notify_success_warnings_only = 1
@@ -150,6 +151,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_failure_arg = To: youremail@example.com
 #notify_failure_arg = From: @name@
 #notify_failure_arg = Subject: %b failed: %c %w
+#notify_failure_arg = Content-Type: text/plain; charset=utf-8
 
 # The server can run scripts on each connection after authentication and before
 # disconnecting.
