Add content-type utf-8 to summary emails.
Change-Id: Ibe9689f6a9713a17b032f54540e982deea95086d

--- a/configs/server/summary_script.in
+++ b/configs/server/summary_script.in
@@ -8,5 +8,6 @@ fi
 (echo "To: $2"
  echo "From: @name@"
  echo "Subject: $3"
+ echo "Content-Type: text/plain; charset=utf-8"
  @sbindir@/@name@ -c "$1" -a S
  echo) | /usr/sbin/sendmail -t
