Fix client_lockdir option.
Change-Id: If1ea84259e21b2bfb940c1068df7b86caa1db41f

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -747,6 +747,7 @@ Additionally, the following options can be overridden here for each client:
 \fBenabled\fR
 \fBprotocol\fR
 \fBdirectory\fR
+\fBclient_lockdir\fR
 \fBdirectory_tree\fR
 \fBtimestamp_format\fR
 \fBpassword_check\fR
