Add NoPowerMode GUI option

--- a/src/win32/installer/ConfigPage2.ini
+++ b/src/win32/installer/ConfigPage2.ini
@@ -1,5 +1,5 @@
 [Settings]
-NumFields=3
+NumFields=5
 
 [Field 1]
 Type=Label
@@ -24,3 +24,19 @@ Left=0
 Right=-1
 Top=15
 Bottom=30
+
+[Field 4]
+Type=Label
+Text=Also run backups when system is on battery:
+Left=0
+Right=90
+Top=50
+Bottom=60
+
+[Field 5]
+Type=CheckBox
+; Text=Also run backups when system is on battery
+Left=95
+Right=-1
+Top=50
+Bottom=60
