Don't send Windows VSS directory data to non-Windows clients.
Change-Id: I0b0f76e262001db8444aa74540e8bbf0c00d7c9a

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -713,10 +713,10 @@ Do not back up the given block device itself, but open it for reading and back u
 Open all block devices for reading and back up the contents as if they were regular files.
 .TP
 \fBsplit_vss=[0|1]\fR
-When backing up Windows computers with @name@ protocol 1, this option allows you to save the VSS header data separate from the file data. The default is off, which means that the VSS header data is saved prepended to the file data.
+When backing up Windows computers with @name@ protocol 1, this option allows you to save the VSS header data separate from the file data. The default is off, which means that the VSS header data is saved prepended to the file data. This option has no effect in protocol 2.
 .TP
 \fBstrip_vss=[0|1]\fR
-When backing up Windows computers with @name@ protocol 1, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '\-x' command line option.
+When backing up Windows computers with @name@ protocol 1, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '\-x' command line option. This option has no effect in protocol 2.
 .TP
 \fBvss_drives=[list of drive letters]\fR
 When backing up Windows computers, this option allows you to specify which drives have VSS snapshots taken of them. If you omit this option, @name@ will automatically decide based on the 'include' options. If you want no drives to have snapshots taken of them, you can specify '0'.
