Bind status port to ::1 and 127.0.0.1 by default.
Introduce special value 'localhost' for status_address that makes burp
server try to bind to ::1 first, and then bind to 127.0.0.1 anyways.
Make it default. Make 'localhost' default server address for client.

--- a/Makefile.am
+++ b/Makefile.am
@@ -490,7 +490,7 @@ do_subst = ( sed \
   -e 's,[@]runstatedir[@],$(runstatedir),g' \
   -e 's,[@]sbindir[@],$(sbindir),g' \
   -e 's,[@]scriptdir[@],$(scriptdir),g' \
-  -e 's,[@]server_address[@],::1,g' \
+  -e 's,[@]server_address[@],localhost,g' \
   -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
   -e 's,[@]name[@],$(PACKAGE_TARNAME),g' \
   -e 's,[@]package_url[@],$(PACKAGE_URL),g' \
