--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,7 @@ install:
   - test "$TRAVIS_OS_NAME" = "osx" && brew install libtool || true
 
 script:
-  - autoreconf -vif
-  - test "$TRAVIS_OS_NAME" = "linux" && ./configure || ./configure --with-openssl=/usr/local/opt/openssl
-  - test "$TRAVIS_OS_NAME" = "linux" && make -j3 distcheck  || make -j3 distcheck DISTCHECK_CONFIGURE_FLAGS="--with-openssl=/usr/local/opt/openssl"
+  - ./.travis-script.sh
 
 after_failure:
   - tail burp-*/_build/sub/test-suite.log
