Add 'monitor_exe' client option for systems that don't have any sensible way to self-determine a process' own path, such as openbsd.
Change-Id: I95fb6ad5af8989d913b584c67ed95623d92c62f8

--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -647,6 +647,9 @@ Path to autoupgrade directory into which upgrades are downloaded. Please see doc
 .TP
 \fBautoupgrade_os=[string]\fR
 Name of the client operating system. Should match a directory name in the server's autoupgrade_dir. If you do not want your client to autoupgrade, do not set this option.
+.TP
+\fBmonitor_exe=[path]\fR
+Where to look to find the burp binary to use when forking a monitor client. This might be needed on systems that don't have any sensible way to self-determine a process' own path, such as openbsd.
 
 .SH INCLUDES / EXCLUDES
 
