--- a/configs/server/burp.conf.in
+++ b/configs/server/burp.conf.in
@@ -125,6 +125,8 @@ timer_arg = 20h
 timer_arg = Mon,Tue,Wed,Thu,Fri,00,01,02,03,04,05,19,20,21,22,23
 # Allow more hours at the weekend.
 timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
+# Allow backups to start any time.
+#timer_arg = always
 # Note that, if you specify no timebands, the default timer script will never
 # allow backups.
 
