--- a/configs/server/burp.conf.in
+++ b/configs/server/burp.conf.in
@@ -115,7 +115,6 @@ ssl_key = @sysconfdir@/ssl_cert-server.key
 # Server DH file.
 ssl_dhfile = @sysconfdir@/dhfile.pem
 
-timer_script = @scriptdir@/timer_script
 # The default timer_script treats the first timer_arg as the minimum interval
 # Ensure that 20 hours elapse between backups
 # Available units:
@@ -127,8 +126,7 @@ timer_arg = Mon,Tue,Wed,Thu,Fri,00,01,02,03,04,05,19,20,21,22,23
 timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # Allow backups to start any time.
 #timer_arg = always
-# Note that, if you specify no timebands, the default timer script will never
-# allow backups.
+# Note that, if you specify no timebands, the timer will never allow backups.
 
 # Uncomment the notify_success_* lines for email notifications of backups that
 # succeeded.
