--- a/manpages/burp.8.in
+++ b/manpages/burp.8.in
@@ -103,8 +103,11 @@ For use with restores \- strip a number of leading path components.
 \fB\-t\fR \fB\fR
 Dry-run mode to test config file syntax.
 .TP
-\fB\-x\fR
-For Windows clients only - do not use the Windows VSS API on restore. Give this option when you are restoring a backup that contains no VSS information.
+\fB\-x\fR (on Windows)
+On restore, do not use the Windows VSS API on restore - give this option when you are restoring a backup that contains no VSS data.
+.TP
+\fB\-x\fR (on non-Windows)
+On restore, strip the Windows VSS data - give this option when you are restoring a backup that contains VSS data.
 .TP
 \fB\-a s\fR \fB\fR
 Run this to connect to a running server to get a live monitor of the status of all your backup clients. The live monitor requires ncurses support at compile time.
