--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ EXTRA_DIST = \
 	configs/client/burp.conf.in \
 	configs/server/burp.conf.in \
 	configs/server/summary_script.in \
+	configs/server/backup_tool_script.in \
 	configs/certs/CA/CA.cnf.in \
 	configs/certs/CA/burp_ca.in \
 	debian \
@@ -97,10 +98,10 @@ sbin_SCRIPTS = $(PACKAGE_TARNAME)_ca
 dist_script_SCRIPTS = \
 	configs/server/timer_script \
 	configs/server/notify_script \
-	configs/server/ssl_extra_checks_script \
-	configs/server/backup_tool_script.in
+	configs/server/ssl_extra_checks_script
 
-EXTRA_script_SCRIPTS = summary_script
+EXTRA_script_SCRIPTS = summary_script \
+	backup_tool_script
 
 EXTRA_scriptdir = $(scriptdir)
 
