--- a/configs/server/backup_tool_script.in
+++ b/configs/server/backup_tool_script.in
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 PROGRAM="backup_tool_script"
 PROGRAM_VERSION=0.4.0
-PROGRAM_BUILD=2018022301
+PROGRAM_BUILD=2018022401
 AUTHOR="(C) 2017-2018 by Orsiris de Jong"
 CONTACT="http://www.netpower.fr - ozy@netpower.fr"
 IS_STABLE=yes
@@ -815,12 +815,14 @@ function ExecTasks {
 			mainItemCount=$(wc -l < "$mainInput")
 			readFromFile=true
 		else
-			Logger "Cannot read file [$mainInput]." "WARN"
+			Logger "Cannot read main file [$mainInput]." "WARN"
 		fi
-		if [ -f "$auxInput" ]; then
-			auxItemCount=$(wc -l < "$auxInput")
-		else
-			Logger "Cannot read file [$auxInput]." "WARN"
+		if [ "$auxInput" != "" ]; then
+			if [ -f "$auxInput" ]; then
+				auxItemCount=$(wc -l < "$auxInput")
+			else
+				Logger "Cannot read aux file [$auxInput]." "WARN"
+			fi
 		fi
 	fi
 
