--- a/src/win32/installer/ConfigPage1.ini
+++ b/src/win32/installer/ConfigPage1.ini
@@ -1,5 +1,5 @@
 [Settings]
-NumFields=9
+NumFields=12
 
 [Field 1]
 Type=Label
@@ -23,52 +23,76 @@ Text=Enter the name or address of your server.
 Left=0
 Right=-1
 Top=15
-Bottom=30
+Bottom=25
 
 [Field 4]
+Type=Label
+Text=Server port:
+Left=0
+Right=90
+Top=35
+Bottom=45
+
+[Field 5]
+Type=Text
+Text=Server port
+Left=95
+Right=-1
+Top=35
+Bottom=45
+
+[Field 6]
+Type=Label
+Text=Enter the port of your server.
+Left=0
+Right=-1
+Top=50
+Bottom=60
+
+[Field 7]
 Type=Label
 Text=Client name:
 Left=0
 Right=90
-Top=40
-Bottom=50
+Top=70
+Bottom=80
 
-[Field 5]
+[Field 8]
 Type=Text
 Text=Client name
 Left=95
 Right=-1
-Top=40
-Bottom=50
+Top=70
+Bottom=80
 
-[Field 6]
+[Field 9]
 Type=Label
 Text=Enter the name that the server will call this client.
 Left=0
 Right=-1
-Top=55
-Bottom=65
+Top=85
+Bottom=95
 
-[Field 7]
+[Field 10]
 Type=Label
 Text=Password:
 Left=0
 Right=90
-Top=78
-Bottom=88
+Top=105
+Bottom=115
 
-[Field 8]
+[Field 11]
 Type=Text
 Text=Password
 Left=95
 Right=-1
-Top=78
-Bottom=88
+Top=105
+Bottom=115
 
-[Field 9]
+[Field 12]
 Type=Label
 Text=Enter the password that this client will give to the server.
 Left=0
 Right=-1
-Top=94
-Bottom=104
+Top=120
+Bottom=130
